# dynamic-metamaterial-mechanisms

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ShearCell_Interaction/: ShearCell_Interaction.sln
ShearCell_Interaction/ShearCell_Editor/: App.xaml  (+7 more)
arduino/: README.md  array.py  test.ino
build__visual-studio/: README.md  ShearCell_Optimization.vcxproj  ipopt-windows-guide.txt
configs/: all.txt  quad.txt
control-code/: ControlLoop.h  control-code.ino
control-code-noclass(latest)/: control-code-noclass(latest).ino
control-code-struct/: Input.h  Mock.h  control.h  main.cpp
controlcode-class/: controlcode-class.ino
data_logger_and_reader/: angles.ino  data_logger_and_reader.ino  inflation.ino
example data/: pts  trafos
example-data/: config.txt  xconfig.txt
manual_angle_logger/: README  crossover  getAngle  manual_angle_logger
new_crossover/: new_crossover_metered.md
paths/: heart.txt  quad.txt  waterdrop.txt
src/: Animation.cpp  Animation.hpp  CMakeLists.txt  ConstraintFun.cpp  ConstraintFun.hpp  ConstraintGraph.cpp  ConstraintGraph.hpp  GridModel.cpp  GridModel.h  MMGrid.cpp  MMGrid.hpp  MetaGrid.cpp  MetaGrid.hpp  MultiAnimation.cpp  MultiAnimation.hpp  MyNLP.cpp  MyNLP.hpp  PRand.hpp  README.md  SimAnnMan.cpp  SimAnnMan.hpp  SimuAn.cpp  SimuAn.hpp  SimulatedAnnealing.cpp  SimulatedAnnealing.hpp  StringConverter.cpp  StringConverter.h  cells.txt  cells_2x2.txt  cells_3x3.txt  cells_4x4.txt  main.cpp  play.cpp  rendering.cpp  rendering.hpp  ui.cpp
three-wire-sensor/: angles.ino  crossover  inflate.ino  three-wire_capacitive_sensor.ino
(+511 files in other folders)
